--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "lessons/*"
   ],
   "scripts": {
-    "start": "echo 'hello'"
+    "start": "aux() { yarn workspace:log \"$(cd lessons && ls -d *\"$1\"* | head -1)\" start; }; aux",
+    "workspace:log": "aux() { echo \"Running $2 in $1.\" && yarn workspace \"$@\"; }; aux",
+    "clean": "rm -rf packages/*/{dist,.cache}",
+    "clean:node_modules": "find . -name node_modules | xargs rm -rf",
+    "format": "prettier **/*.{js,json,vue} -l --write --ignore-path .gitignore || :",
+    "latest": "yarn upgrade-interactive --latest && yarn upgrade -L"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
